# chelyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
src/chelyzer_api/: __main__.py  app.py  config.py  game_store.py
src/chelyzer_api/enums/: __init__.py  game_result.py  game_side.py  opening.py
src/chelyzer_api/filters/: __init__.py  base_filter.py  date_filter.py  opening_filter.py  ply_filter.py  rating_filter.py  result_filter.py  side_filter.py
src/chelyzer_api/models/: __init__.py  filter_request.py
src/chelyzer_api/routes/: __init__.py  games.py  options.py
src/chelyzer_lichess/: __init__.py  lichess_cache.py  lichess_client.py
src/chelyzer_lichess/models/: __init__.py  game.py  study.py
src/chelyzer_rating/: __init__.py  cache.py  database_manager.py
src/chelyzer_rating/base/: __init__.py  base_rating_client.py
src/chelyzer_rating/dwz/: __init__.py  dsb_http_client.py  dwz_client.py  player.py  player_cache.py  player_reader.py  table_manager.py  tournament.py
src/chelyzer_rating/dwz/models/: __init__.py  dsb_credentials.py  player.py  player_dwz.py
tests/: test_api.py  test_dwz_client.py  test_lichess_client.py
tests/chelyzer_rating/: test_dwz_client.py
